[Update] update JWTfilter and update LoggerAnnotation component